--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/onlinetest
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/onlinetest
+spring.datasource.url=jdbc:mysql://34.66.7.90:3306/onlinetest?useSSL=false
+spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:us-central1:onlinetets63it2&soketFactory=com.google.cloud.sql.mysql.SoketFactory&user=root&password=root
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.javax.persistence.query.timeout=60000
