commit to deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/onlinetest
 #spring.datasource.url=jdbc:mysql://34.66.7.90:3306/onlinetest?useSSL=false
 #spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:us-central1:onlinetets63it2&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:us-central1:onlinetets63it2&socketFactory=com.google.cloud.sql.mysql.SocketFactory&amp&user=root&password=root&useSSL=false
+spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:asia-northeast1:onlinetest&socketFactory=com.google.cloud.sql.mysql.SocketFactory&amp&user=root&password=&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
