--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:us-central1:onlinetets63it2&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:asia-northeast1:onlinetest&socketFactory=com.google.cloud.sql.mysql.SocketFactory&amp&user=root&password=&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.javax.persistence.query.timeout=60000
