--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,7 @@
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/onlinetest
 spring.datasource.url=jdbc:mysql://onlinetest63it2.cic7dxpnkgbo.us-east-2.rds.amazonaws.com:3306/onlinetest?useSSL=false
-#spring.datasource.url=jdbc:mysql://35.200.62.44:3306/onlinetest?useSSL=false
-#spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:us-central1:onlinetets63it2&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-#spring.datasource.url=jdbc:mysql://google/onlinetest?cloudSqlInstance=onlinetest-335919:asia-northeast1:onlinetest&socketFactory=com.google.cloud.sql.mysql.SocketFactory&amp&user=root&password=&useSSL=false
-#spring.cloud.gcp.sql.database-name=onlinetest
-#spring.cloud.gcp.sql.instance-connection-name=onlinetest-335919:asia-northeast1:onlinetest
 spring.datasource.username=admin
 spring.datasource.password=123123123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.javax.persistence.query.timeout=60000
+spring.jpa.hibernate.ddl-auto = update
